# sessionbook

./: .gitignore  README.md  pyproject.toml
.github/workflows/: coverage.yml  lint.yml  publish.yml  security.yml  test.yml  typecheck.yml
src/sessionbook/: __main__.py  capture.py  cli.py  html.py  jsonl.py  util.py
tests/: bench_conversion.py  manual_test_plan.md  test_capture.py  test_html.py  test_integration.py  test_jsonl.py  test_sync.py
tests/fixtures/: malformed.jsonl  mock_claude.sh  mock_claude_exit42.sh  requestid_collapse.jsonl  simple_session.jsonl  tool_use_session.jsonl  unicode_session.jsonl
